@@ -37,6 +37,7 @@ Fixed bugs
 
 - Input and Output: handle floating point numbers precisely in parsers and writers
 - OPB-Parser: handle additional whitespaces
+- PresolveMethod: avoid counting calls of symmetry extensions additionally
 - SimpleSubstitution: correct feasibility tolerances on euclidean coprime substitutions
 - SingleRow: eliminate computational overhead in row propagation
 
